--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "^6.26.0",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
+    "better-scroll": "^0.1.15",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.3.3",
