--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.3.3",
+    "vuex": "^2.3.1",
     "vue-lazyload": "^1.1.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "js-base64": "^2.1.9",
+    "lyric-parser": "^1.0.1",
+    "good-storage": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
